static/style.css
html {
    --font-size-base: 1rem;
    --font-size-scale: 1.618;
    --font-size-scale-down: 1.272;

    --font-size-milli: calc(var(--font-size-base) / var(--font-size-scale-down));
    --font-size-micro: calc(var(--font-size-milli) / var(--font-size-scale-down));

    --font-size-kilo: calc(var(--font-size-base) * var(--font-size-scale));
    --font-size-mega: calc(var(--font-size-kilo) * var(--font-size-scale));

    line-height: 1.5;
    font-size: var(--font-size-base);
}

h1 { font-size: var(--font-size-mega); }
h2 { font-size: var(--font-size-kilo); }
h3,h4,h5,h6 { font-siz: var(--font-size-kilo); }

header {
    border-bottom: 1px solid black;
    padding-bottom: 5px;
    margin-bottom: 10px;

    font-family: monospace;
}

nav {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    gap: 2ch;
    align-items: baseline;
    font-size: var(--font-size-base);
}

body {
    max-width: 800px;
    margin: auto;
    color: #252525;
    font-family: helvetica, sans-serif;
}

/* Prevent text from touching sides of screen on mobile */
@media screen and (max-width: 840px) {
    body {
        padding-right: 20px;
        padding-left: 20px;
    }
}

.h-card {
    display: grid;
    grid-gap: 20px;
    grid-template:
        "name"
        "description"
        "links"
}

@media screen and (min-width: 700px) {
    .h-card {
        display: grid;
        grid-gap: 20px;
        grid-template:
            "name        name"
            "description links"
            / 2fr 1fr
    }

}

.h-card .p-name {
    grid-area: name;
    font-size: var(--font-size-mega);
    text-align: center;
}
.h-card .about-me {grid-area: description;}
.h-card .contact {grid-area: links;}
.h-card .contact .contact-entry { display: flex; justify-content: space-between; }
.h-card .contact .contact-entry { text-align: right; }

.page-external-link {
    display: block;
}

.external-marker {
    padding: 2px;
    font-weight: bold;
    font-variant: all-small-caps;
}

h1 {
    margin-top: 20px;
    display: block;
    margin-bottom: 20px;
    text-align: center;
}

.draft:before {
    content: "DRAFT"
    background: red;
}

h2 { display: flex; }

h2:after {
  color:black;
  content:'';
  flex:1;
  border-bottom:groove 2px;
  margin:auto 0.25em;
  box-shadow: 0 -1px ;/* ou 0 1px si border-style:ridge */
}

.post-list {
    list-style: none;
}

.post-list li {
    list-style: none;
    display: flex;
    justify-content: space-between;
}

.post-list li::after {
  background-image: radial-gradient(circle, currentcolor 1px, transparent 1.5px);
  background-position: bottom;
  background-size: 1ex 4.5px;
  background-repeat: space no-repeat;
  content: "";
  flex-grow: 1;
  height: 1em;
  order: 2;
}

.post-list {
    padding-left: unset;
}

.post-list li .details {
    order: 3;
}

.details .medium {
    display: inline-block;
    padding: 2px;
    font-weight: bold;
    font-variant: all-small-caps;
}

.link-list {
    columns: 200px 3;
}

.link-list > * {
    display: block;
    break-inside: avoid-column;
}

.article-details {
    display: flex;
    justify-content: space-between;

    border-bottom: 1px solid grey;
    border-top: 1px solid grey;
    padding: 10px 0px;
    font-size: var(--font-size-milli);
}

.spoiler {
    color: grey;
    background-color: grey;
    padding: 3px;
}

.spoiler:before {
    color: white;
    content: "Spoiler";
    position: absolute;
}

.spoiler:hover:before {
    display: none;
}

.spoiler:hover {
    color: inherit;
    background-color: inherit;
}

.h-feed .h-entry .e-content p:first-child {
    margin-top: 0;
}
.h-feed .h-entry .e-content p:last-child {
    margin-bottom: 0;
}

.h-feed .h-entry {
    border-bottom: 1px solid grey;
    padding: 10px 20px;
}

.h-feed .h-entry .dt-published {
    display: block;
    text-align: right;
}

.broken-link {
    color: red;
}

blockquote {
    border-left: 3px solid gray;
    margin-left: 7px;
    padding: 1px 10px;
}

.brain-list {
    columns: 15ch 3;
}

.brain-entry {
    display: block;
    margin-bottom: 10px;
}

